--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -26,7 +26,7 @@
     <LinearLayout
         android:id="@+id/buttonview"
         android:layout_width="wrap_content"
-
+        android:layout_marginTop="8dp"
         android:layout_marginLeft="10dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_totalExpence">
