--- a/app/src/main/res/layout/layout_category_notes.xml
+++ b/app/src/main/res/layout/layout_category_notes.xml
@@ -16,7 +16,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardview"
+            android:id="@+id/cate_cardview"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:clipToOutline="true"
@@ -24,32 +24,32 @@
             app:cardCornerRadius="20dp">
 
             <ImageView
-                android:id="@+id/imageview"
+                android:id="@+id/cate_imageview"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:clipToOutline="true"
                 android:padding="10dp"
-
                 android:src="@drawable/ic_shopping" />
         </androidx.cardview.widget.CardView>
 
         <LinearLayout
-            android:id="@+id/gridview"
+            android:gravity="center"
+            android:id="@+id/cate_gridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="14dp"
             android:orientation="horizontal"
-            android:layout_toRightOf="@+id/cardview"
+            android:layout_toRightOf="@+id/cate_cardview"
             >
 
             <TextView
-                android:id="@+id/tv_cat"
+                android:id="@+id/cate_tv_cat"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_toRightOf="@+id/imageview"
+                android:layout_toRightOf="@+id/cate_imageview"
                 android:hint="category"
                 android:text="Category"
                 android:gravity="start"
@@ -60,7 +60,7 @@
 
             <TextView
                 android:layout_weight="1"
-                android:id="@+id/tv_amount"
+                android:id="@+id/cate_tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -78,12 +78,12 @@
             <TextView
 
                 android:gravity="center"
-                android:id="@+id/tv_date"
+                android:id="@+id/cate_tv_date"
                 android:layout_width="99dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginRight="29dp"
-                android:layout_toRightOf="@+id/imageview"
+                android:layout_toRightOf="@+id/cate_imageview"
                 android:layout_weight="3"
                 android:hint="Date"
                 android:text="Date"
@@ -98,25 +98,17 @@
 
     <ProgressBar
 
-        android:id="@+id/progress_horizontal"
-        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="6dp"
-        android:layout_below="@+id/gridview"
-        android:layout_marginLeft="69dp"
-        android:layout_marginTop="-26dp"
-        android:layout_marginRight="35dp"
-        android:background="@drawable/background_progressbar"
-        android:max="100"
-        android:progress="70"
-        android:progressBackgroundTint="#07BB86FC"
-        android:progressTint="#E0F3FF"
-
+        android:visibility="gone"
+        android:id="@+id/cate_progress_horizontal"
+        android:layout_marginTop="200dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         />
 
     <TextView
         android:visibility="gone"
-        android:id="@+id/tv_note"
+        android:id="@+id/cate_tv_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pbar"
@@ -128,13 +120,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="13dp"
         android:textStyle="bold" />
-
     <ImageView
-        android:id="@+id/iv_btndelete"
+        android:id="@+id/cate_iv_btndelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:layout_marginTop="-45dp"
+        android:layout_marginTop="-55dp"
         android:background="@drawable/background_layout"
         android:padding="5dp"
         android:src="@drawable/ic_delete" />
