--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,4 +18,9 @@
         <item name="itemIconTint">@color/calender</item>
         <item name="itemTextColor">@color/white</item>
     </style>
+
+    <style name="CircularDeterminateProgressBar">
+        <item name="android:indeterminateOnly">false </item>
+        <item name="android:progressDrawable">@drawable/background_cricular_progressbar</item>
+    </style>
 </resources>
