--- a/app/src/main/res/drawable-v24/background_layout.xml
+++ b/app/src/main/res/drawable-v24/background_layout.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#00FAFAFA"/>
+    <solid android:color="#00FAFAFA" />
     <stroke android:color="#0AE7E7E7"
-        android:width="1dp"/>
+        android:width="1dp"
+        />
     <corners android:radius="4dp"/>
 
 </shape>
