--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
 
 
         <LinearLayout
-
             android:id="@+id/ll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -94,6 +93,7 @@
                 android:drawableStart="@drawable/ic_note"
                 android:drawablePadding="10dp"
                 android:hint="Add Note.."
+                android:visibility="gone"
                 android:background="@drawable/background_layout"
                 android:padding="10dp"
                 android:textSize="15dp"
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="70dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="30dp"
                 android:backgroundTint="#43A047"
