--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -9,28 +9,38 @@
     android:visibility="visible"
     tools:context=".View.User_Notes">
 
-    <TextView
-        android:id="@+id/tv_totalExpence"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="50dp"
-        android:background="@drawable/background_layout"
-        android:drawableStart="@drawable/ic_rupee"
-        android:padding="5dp"
-        android:text="000"
-        android:textSize="50dp"
-        android:textStyle="bold" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Expensecard"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/card_background"
+        android:backgroundTint="#AE171717">
+
+
+        <TextView
+            android:id="@+id/tv_totalExpence"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|left"
+            android:layout_marginLeft="10dp"
+            android:drawableStart="@drawable/ic_rupee"
+            android:padding="5dp"
+            android:text="000"
+            android:textSize="50dp"
+            android:textStyle="bold" />
+
+    </androidx.cardview.widget.CardView>
+
 
     <LinearLayout
         android:id="@+id/buttonview"
         android:layout_width="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="10dp"
-        android:orientation="horizontal"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_totalExpence">
+        android:layout_below="@+id/Expensecard"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/show_chip"
@@ -76,8 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonview"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
 
     <ProgressBar
@@ -88,28 +97,28 @@
         android:layout_below="@+id/rec_Categorychips"
         android:layout_gravity="center"
         android:layout_marginLeft="100dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/background_txt_progressbar"
+        android:backgroundTint="#0F8BC6EC"
         android:indeterminateOnly="false"
         android:progress="80"
-        android:visibility="gone"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="#0F8BC6EC"
-        android:background="@drawable/background_txt_progressbar"
         android:progressDrawable="@drawable/background_cricular_progressbar"
-        android:rotation="-360" />
+        android:rotation="-360"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_txtper"
+        style="@style/TextAppearance.AppCompat.Body2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/new_pgbar"
-        android:background="@drawable/background_layout"
-        android:textSize="15dp"
-        android:text="hello"
-        android:visibility="gone"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
+        android:background="@drawable/background_layout"
         android:gravity="center"
-        style="@style/TextAppearance.AppCompat.Body2"
+        android:text="hello"
+        android:textSize="15dp"
+        android:visibility="gone"
 
         />
 
@@ -172,14 +181,13 @@
             style="@style/TextAppearance.AppCompat.Body2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="255dp"
+            android:layout_marginTop="360dp"
             android:backgroundTint="#0F8BC6EC"
             android:gravity="center"
             android:text="hello"
             android:textSize="25dp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
