--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -29,7 +29,6 @@
                 android:layout_height="match_parent"
                 android:clipToOutline="true"
                 android:padding="10dp"
-
                 android:src="@drawable/ic_shopping" />
         </androidx.cardview.widget.CardView>
 
@@ -39,33 +38,32 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="4dp"
-            android:orientation="horizontal"
             android:layout_toRightOf="@+id/cardview"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_cat"
-                android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_toRightOf="@+id/imageview"
+                android:layout_weight="1"
+                android:gravity="start"
                 android:hint="category"
                 android:text="Category"
-                android:gravity="start"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="13dp"
                 android:textStyle="bold" />
 
 
             <TextView
-                android:layout_weight="1"
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="start"
+                android:layout_weight="1"
                 android:drawableStart="@drawable/ic_rupee_small"
+                android:gravity="start"
                 android:hint="amount"
                 android:text="Amount"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -73,11 +71,8 @@
                 android:textStyle="bold" />
 
 
-
-
             <TextView
 
-                android:gravity="center"
                 android:id="@+id/tv_date"
                 android:layout_width="99dp"
                 android:layout_height="wrap_content"
@@ -85,6 +80,7 @@
                 android:layout_marginRight="29dp"
                 android:layout_toRightOf="@+id/imageview"
                 android:layout_weight="3"
+                android:gravity="center"
                 android:hint="Date"
                 android:text="Date"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
@@ -102,11 +98,11 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="6dp"
+        android:background="@drawable/background_progressbar"
         android:layout_below="@+id/gridview"
         android:layout_marginLeft="69dp"
         android:layout_marginTop="-26dp"
         android:layout_marginRight="35dp"
-        android:background="@drawable/background_progressbar"
         android:max="100"
         android:progress="70"
         android:progressBackgroundTint="#07BB86FC"
