Updates in 1.CategoryAdapter 2.Ui

--- a/app/src/main/res/layout/activity_user_notes.xml
+++ b/app/src/main/res/layout/activity_user_notes.xml
@@ -13,8 +13,8 @@
         android:id="@+id/Expensecard"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@drawable/card_background"
-        android:backgroundTint="#AE171717">
+        android:backgroundTint="#1481ACF6"
+        >
 
 
         <TextView
