--- a/app/src/main/res/layout/layout_notes.xml
+++ b/app/src/main/res/layout/layout_notes.xml
@@ -21,12 +21,12 @@
             android:layout_height="wrap_content"
             android:clipToOutline="true"
             android:elevation="20dp"
-            app:cardCornerRadius="20dp">
+            app:cardCornerRadius="60dp">
 
             <ImageView
                 android:id="@+id/imageview"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="50dp"
                 android:clipToOutline="true"
                 android:padding="10dp"
                 android:src="@drawable/ic_shopping" />
